updated readme
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/cdi/trunk@1075257 13f79535-47bb-0310-9956-ffa450edef68